<resources>
    <string name="app_name">Distance Tracker</string>
    <string name="continue_text">Continue</string>
    <string name="permission_description">Welcome to Distance Tracker.\n In order to use our application we will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue tap on the button below</string>
    <string name="permission_required">Permission Required</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="tap_on_my_location_button">Tap on My Location Button</string>
    <string name="go">GO</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
    <string name="setting_icon">setting_icon</string>
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="changer_map_style">Change map style</string>
    <string name="back">Back</string>
    <string-array name="map_styles">
        <item>Standard</item>
        <item>Night</item>
        <item>Retro</item>
    </string-array>
</resources>